--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
-flask
-flask_cors
 python-dotenv
+openai
+transformers
+torch
+torchvision
+pillow
+numpy
+gdown
+langgraph
 langchain
 langchain-core
 langchain-community
 langchain-text-splitters
-langgraph
-sentence-transformers
-transformers
-torch
-torchvision
+flask
+flask_cors
 pypdf
-faiss-cpu
 tqdm
-numpy
-pillow
 beautifulsoup4
 lxml
+accelerate
+sentence-transformers
