--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 python-dotenv
 openai
-flask
-flask_cors
-supabase
+transformers
+torch
+torchvision
+pillow
+numpy
+gdown
+langgraph
 langchain
 langchain-core
 langchain-community
 langchain-text-splitters
-gunicorn
-tqdm
+flask
+flask_cors
 pypdf
+tqdm
 beautifulsoup4
 lxml
-numpy
-Pillow
-torch
+accelerate
+sentence-transformers
+faiss-cpu
+supabase
+gunicorn
